--- a/package.json
+++ b/package.json
@@ -8,23 +8,37 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prismaDev": "dotenv -e .env.local prisma migrate dev"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.6",
+    "@prisma/client": "^4.14.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@types/bcrypt": "^5.0.0",
     "@types/ms": "^0.7.32",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "20.8.3",
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.11",
+    "@types/bcryptjs": "^2.4.2",
     "@vercel/postgres": "0.5.0",
     "autoprefixer": "10.4.16",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv-cli": "^7.4.1",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
     "framer-motion": "^11.1.1",
     "ms": "^2.1.3",
     "next": "13.5.4",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.31",
+    "prisma": "^4.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
