--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.6",
-    "@prisma/client": "^4.14.0",
+    "@prisma/client": "^5.13.0",
+    "@prisma/extension-pulse": "^1.0.1",
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.42.5",
     "@tailwindcss/forms": "^0.5.3",
     "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/ms": "^0.7.32",
     "@types/next-auth": "^3.15.0",
     "@types/node": "20.8.3",
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.11",
-    "@types/bcryptjs": "^2.4.2",
     "@vercel/postgres": "0.5.0",
     "autoprefixer": "10.4.16",
     "axios": "^1.4.0",
